--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Rooms#index</h1>
-<p>Find me in app/views/rooms/index.html.erb</p>
+<h1>登録施設一覧</h1>
+<%= link_to '新しい施設を登録する', new_room_path %>
+<table>
+  <thead>
+    <tr>
+      <th>施設画像</th>
+      <th>施設名</th>
+      <th>紹介文</th>
+      <th>宿泊料金 (/日)</th>
+      <th>作成日</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @rooms.each do |room| %>
+      <tr>
+        <td>
+          <% if room.room_image.present? %>
+            <%= image_tag(room.room_image) %>
+          <% else %>
+            <%= image_tag('image.png') %>
+          <% end %>
+        </td>
+        <td><%= link_to room.room_name, room_path(room) %></td>
+        <td><%= room.introduction %></td>
+        <td><%= room.price %>円</td>
+        <td><%= room.created_at.strftime("%Y-%m-%d") %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= link_to 'ホームに戻る', root_path %>
+
