--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,31 @@
-<h1>ユーザープロフィール</h1>
+<div class="d-flex justify-content-center">
+  <div class="account">
+    <h1>アカウント情報</h1>
+    <p>メールアドレス: <%= @user.email %></p>
+    <p>パスワード： ******</p>
+    <% if current_user == @user %>
+      <%= link_to "アカウントを編集", edit_account_user_path(@user) %>
+    <% end %>
+  </div>
+</div>
+<div class="d-flex justify-content-center">
+  <div class="profile">
+    <h1>プロフィール情報</h1>
+    <p>名前: <%= @user.name %></p>
+    <p>画像: </p>
 
-<p>Email: <%= @user.email %></p>
-<p>名前: <%= @user.name %></p>
-<p>画像: </p>
+    <% if @user.image.present? && @user.image.attached? %>
+      <%= image_tag @user.image.variant(resize: "200x200"), alt: "User Image" %>
+    <% else %>
+      <%= image_tag 'icon.png', alt: "Default Icon", width: "100", height: "100" %>
+    <% end %>
 
-<% if @user.image.present? && @user.image.attached? %>
-  <%= image_tag @user.image.variant(resize: "200x200"), alt: "User Image" %>
-<% else %>
-  <%= image_tag 'icon.png', alt: "Default Icon", width: "100", height: "100" %>
+   <p>紹介文: <%= @user.profile %></p>
+
+    <% if current_user == @user %>
+      <%= link_to "プロフィールを編集", edit_profile_user_path(@user) %>
 <% end %>
-
-<p>プロフィール: <%= @user.profile %></p>
-
-<% if current_user == @user %>
-  <%= link_to "アカウントを編集", edit_account_user_path(@user) %>
-  <%= link_to "プロフィールを編集", edit_profile_user_path(@user) %>
-<% end %>
-
-<%= link_to 'ホームに戻る', root_path %>
+  
+    <%= link_to 'ホームに戻る', root_path %>
+  </div>
+</div>
