--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,43 +3,31 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 /* CSS (SCSS) */
 .FirstView {
-    background: image-url('worman.jpg') no-repeat center center/cover; // 背景画像を設定
+    background: image-url('worman.jpg') no-repeat center center/cover; 
     height: 850px;
     position: relative;
     z-index: 1;
+    font-size: 60px;
 }
-
-// タイトルのスタイル
-.FirstView_title {
-    font-family: Arial, sans-serif; /* 標準的なフォントを選択 */
-    color: black; /* テキストの色を黒に設定 */
-    font-size: 3rem; /* フォントサイズを大きく設定 */
-    font-weight: bold; /* フォントを太字に */
-}
-
-// 検索ボックスのスタイル
 .search-box {
     max-width: 500px;
     margin: 0 auto;
 }
-
-// フォーム要素のスタイリング
 .form-control {
-    margin-bottom: 10px; // モバイルビューでのマージン
+    margin-bottom: 10px; 
 }
 
 .btn {
-    width: 100%; // モバイルビューでのボタン幅
+    width: 100%; 
 }
 
-// レスポンシブデザイン
 @media (min-width: 768px) {
     .form-inline .form-control {
-        width: auto; // デスクトップビューでは幅を自動に
-        margin-right: 10px; // 右のマージンを追加
+        width: auto; 
+        margin-right: 10px; 
     }
     .form-inline .btn {
-        width: auto; // デスクトップビューでは幅を自動に
+        width: auto; 
     }
 }
 body, header, html {
