--- a/app/views/users/edit_profile.html.erb
+++ b/app/views/users/edit_profile.html.erb
@@ -12,13 +12,12 @@
    <div class="form-group">
     <%= f.label :アイコン %>
     <%= f.file_field :image, class: 'form-control' %>
-     <% if @user.image.present? && @user.image.attached? %>
-      <%= image_tag @user.image.variant(resize: "100x100"), class: 'img-thumbnail mt-3' %>
+     <% if @user.image.attached? %>
+    <%= image_tag(@user.image.variant(resize: "200x200"), alt: "User Image") %>
     <% else %>
-      <%= image_tag 'icon.png', alt: 'Default Icon', class: 'img-thumbnail mt-3', width: '100', height: '100' %>
+     <%= image_tag('icon.png', alt: "Default Icon", width: "100", height: "100") %>
     <% end %>
-  </div>
-
+   </div>
   <div class="form-group">
     <%= f.label :自己紹介 %>
     <%= f.text_area :profile, class: 'form-control' %>
