--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -14,10 +14,10 @@
     <% @rooms.each do |room| %>
       <tr>
         <td>
-          <% if room.room_image.present? %>
-            <%= image_tag(room.room_image) %>
+         <% if room.room_image.attached? %>
+            <%= image_tag(room.room_image, width: '100', height: '100') %> 
           <% else %>
-            <%= image_tag('image.png') %>
+            <%= image_tag('image.png', width: '100', height: '100') %>
           <% end %>
         </td>
         <td><%= link_to room.room_name, room_path(room) %></td>
